--- a/static/styles.css
+++ b/static/styles.css
@@ -31,7 +31,6 @@ body {
     margin: 8px 0;
     border: none;
     border-radius: 4px;
-    cursor: pointer;
     transition: background-color 0.3s;
 }
 
@@ -56,3 +55,55 @@ a:hover {
     border-radius: 5px;
     margin-bottom: 10px;
 }
+
+.calendar {
+    margin-top: 5%;
+    border: 1px solid black;
+    display: flex;
+}
+
+.day {
+    width: 100%;
+    height: 100px;
+    border: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.selected {
+    background-color: lightgray;
+}
+
+.scroll-button {
+    background-color: lightcoral;
+    color: black;
+    padding: 5px 5px;
+    margin: 8px 0;
+    border: 1px solid black;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+}
+.scroll-button:hover {
+    background-color: white;
+}
+
+.habit-list {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 25%;
+    padding: 20px;
+    border-radius: 8px;
+    list-style: none;
+    font-size: x-large;
+    border: 1px solid black;
+    text-align: center;
+    width: 60%;
+}
+
+
+
+
