--- a/static/styles.css
+++ b/static/styles.css
@@ -1,21 +1,22 @@
 body {
+    display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 .container {
     position: absolute;
-    top: 50%;
-    left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    width: 25%;
-    padding: 20px;
+    padding: 40px;
+    padding-left: 70px;
+    padding-right: 70px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    width: 100%;
 }
 
 .input {
-    width: 100%;
     padding: 10px;
     margin: 8px;
     box-sizing: border-box;
@@ -24,9 +25,7 @@ body {
 }
 
 .button {
-    width: 100%;
-    background-color: #769fc0;
-    color: white;
+    background-color: rgb(202, 206, 190);
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
@@ -35,7 +34,7 @@ body {
 }
 
 .button:hover {
-    background-color: #457fa0;
+    background-color: pink;
 }
 
 a {
