--- a/templates/habits.html
+++ b/templates/habits.html
@@ -3,26 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <title>Habits</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='calendar.css') }}">
     </head>
     <body>
+        <div class="container">
         <h2>Choose the habits you want to track!</h2>
         <form action="/habits" method="post">
-            <p>Sleep (hours)<br>
-            <input type="checkbox" class="input" name="sleep" value="true">
-            <p>Workout<br>
-            <input type="checkbox" class="input" name="workout" value="true">
-            <p>Steps<br>
-            <input type="checkbox" class="input" name="steps" value="true">
-            <p>Study<br>
-            <input type="checkbox" class="input" name="study" value="true">
-            <p>Journal<br>
-            <input type="checkbox" class="input" name="journal" value="true">
-            <p>Meditate<br>
-            <input type="checkbox" class="input" name="meditate" value="true">
-            <p>Mood<br>
-            <input type="checkbox" class="input" name="mood" value="true">
+            {% for habit in ['sleep', 'workout', 'steps', 'study', 'journal', 'meditate', 'mood'] %}
+            <p>{{ habit.capitalize() }}<br>
+            <input type="checkbox" class="input" name="{{ habit }}" value="true"
+            {% if habit in habits %} checked {% endif %}>
+            {% endfor %}
             <p>
             <input type="submit" class="button" value="Done">
         </form>
+        {% if habits %}
+        <a href="/day">Return</a>
+        {% endif %}
+        </div>
     </body>
 </html>
