--- a/templates/register.html
+++ b/templates/register.html
@@ -20,7 +20,7 @@ Register
             <input type="submit" class="button" value="Create Account">
         </form>
         <p>
-        <a href="/login">Return</a>
+        <a href="/">Return</a>
     </div>
 <div/>
 {% endblock %}
