--- a/static/calendar.css
+++ b/static/calendar.css
@@ -3,17 +3,18 @@ body {
     justify-content: center;
     align-items: center;
     background-color: rgb(248, 234, 213);
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .container {
     background-color: rgb(255, 254, 244);
     padding: 50px;
-    padding-left: 100px;
-    padding-right: 100px;
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     text-align: center;
+    width: 40%;
+    max-width: 800px;
+
 }
 
 .input {
@@ -27,7 +28,20 @@ body {
 ul {
     list-style-type: none;
     text-align: left;
+    padding: 0;
+    margin-top: 25px;
+    margin-bottom: 25px;
+
 }
+
+li {
+    list-style-type: none;
+    width: 100%;
+    padding: 10px;
+    border-bottom: 1px solid #ccc;
+    text-align: center;
+}
+
 
 .button {
     padding: 5px 5px;
