--- a/static/calendar.css
+++ b/static/calendar.css
@@ -4,6 +4,7 @@ body {
     align-items: center;
     background-color: rgb(248, 234, 213);
     min-height: 100vh;
+    flex-direction: column;
 }
 
 .container {
@@ -14,7 +15,7 @@ body {
     text-align: center;
     width: 40%;
     max-width: 800px;
-
+    margin: 20px;
 }
 
 .input {
@@ -71,4 +72,19 @@ a:hover {
 
 h2 {
     font-size: 1.6em;
+}
+
+.navigation-bar {
+    position: fixed;
+    top: 20px;
+    width: 100%;
+    padding: 30px;
+}
+
+.navigation-bar a {
+    color: black;
+    margin: 0 10px;
+    text-decoration: none;
+    font-size: larger;
+    padding-left: 40px;
 }
