--- a/templates/month.html
+++ b/templates/month.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Monthly View</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='month.css') }}">
+    <link rel="stylesheet" href="/static/main.css">
+    <link rel="stylesheet" href="/static/month.css">
 </head>
 <body>
     <div class="container">
