--- a/static/month.css
+++ b/static/month.css
@@ -1,13 +1,5 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(248, 234, 213);
-    min-height: 100vh;
-}
-
 .container {
-    background-color: rgb(255, 254, 244);
+    background-color: #edf2f4;
     padding: 10px;
     padding-bottom: 60px;
     padding-top: 40px;
@@ -16,6 +8,7 @@ body {
     text-align: center;
     width: 100%;
     max-width: 90%;
+    margin-top: 200px;
 }
 
 table {
