--- a/templates/habits.html
+++ b/templates/habits.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Habits</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='calendar.css') }}">
+        <link rel="stylesheet" href="/static/main.css">
     </head>
     <body>
         <div class="container">
