--- a/templates/register.html
+++ b/templates/register.html
@@ -4,10 +4,10 @@ Register
 {% endblock %}
 {% block content %}
 <div>
-    {% if notification %}
-    <p id="notification" class="notification"> Error: {{ message }}</p>
-    {% endif %}
     <div class="container">
+        {% if notification %}
+            <p id="notification" class="notification">{{ message }}</p>
+        {% endif %}
         <h2>Register</h2>
         <form action="/register" method="post">
             <p>Username:<br>
